New Feature: add ability to delete from cuisine_list

--- a/templates/cuisine_list.html
+++ b/templates/cuisine_list.html
@@ -8,10 +8,10 @@
                 <div class="col s12">
                     <ul class="collapsible popout" data-collapsible="accordion">
                         <li>
-                            <div class="collapsible-header"><i class="material-icons">filter_drama</i>Cuisine List</div>
+                            <div class="collapsible-header"><i class="material-icons">settings_ethernet</i>Cuisine List</div>
                             {% for row in cuisine_list_data %}
                             <div class="collapsible-body"><span>{{ row.cuisine_list_name }} </span>
-                                <a href="#" class="secondary-content"><i class = "material-icons">delete</i></a>
+                                <a href="{{ url_for('delete_cuisine_list', cuisine_list_ID = row.cuisine_list_ID) }}" class="secondary-content"><i class = "material-icons">delete</i></a>
                             </div>
                             {% endfor %}
                         </li>
