--- a/templates/course_list.html
+++ b/templates/course_list.html
@@ -8,10 +8,10 @@
                 <div class="col s12">
                     <ul class="collapsible popout" data-collapsible="accordion">
                         <li>
-                            <div class="collapsible-header"><i class="material-icons">filter_drama</i>Course List</div>
+                            <div class="collapsible-header"><i class="material-icons">settings_ethernet</i>Course List</div>
                             {% for row in course_list_data %}
                             <div class="collapsible-body"><span>{{ row.course_list_name }} </span>
-                                <a href="#!" class="secondary-content"><i class = "material-icons">delete</i></a>
+                                <a href="{{ url_for('delete_course_list', course_list_ID = row.course_list_ID) }}" class="secondary-content"><i class = "material-icons">delete</i></a>
                             </div>
                             {% endfor %}
                         </li>
