started adding basic footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,29 @@
     </ul>
     {% endif %} {% endwith %} {% block body %}{% endblock %} {% block content %} {% endblock %}
 
+    <!-- footer for all pages -->
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <p class="grey-text text-lighten-4">You can use this website to keep track of all your cooking recipes</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="{{url_for('index')}}">Home</a></li>
+                        <li><a class="grey-text text-lighten-3" href="{{url_for('allergens_list')}}">Allergens List</a></li>
+                        <li><a class="grey-text text-lighten-3" href="{{url_for('course_list')}}">Course List</a></li>
+                        <li><a class="grey-text text-lighten-3" href="{{url_for('cuisine_list')}}">Cuisine List</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+    <!-- scripts-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script type="text/javascript">
