--- a/templates/allergens.html
+++ b/templates/allergens.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container">
-    <div class="row">
+    <div class="row container-position">
         <div class="col s12">
 
             <!-- If we fine some all data we display it on the page, else we handle it as new data input -->
             {% if allergens_data: %}
             <div class="row">
                 <ul class="collection with-header">
-                    <li class="collection-header">
-                        <h4> {{ allergens_data[0].recipe_name }} </h4>
+                    <li class="collection-header collection-header-sub">
+                        <h5> {{ allergens_data[0].recipe_name }} </h5>
                     </li>
                     {% for row in allergens_data %}
-                    <li class="collection-item">
+                    <li class="collection-item collection-item-sub">
                         <div> {{row.allergens_name}} <a href="{{ url_for('delete_allergens_from_recipe', recipe_ID = row.recipe_ID, allergens_ID = row.allergens_ID) }}" class="secondary-content"><i class = "material-icons">delete</i></a></div>
                     </li>
                     {% endfor %}
@@ -58,7 +58,7 @@
             <!-- draw a back button -->
             <div class="row">
                 <div class="col s12">
-                    <div class="row">
+                    <div class="row sub-footer">
                         <a href="{{url_for('recieps', recipe_ID = recipe_ID ) }}" class="btn">Back To Recipe</a>
                     </div>
                 </div>
