--- a/templates/course.html
+++ b/templates/course.html
@@ -6,11 +6,11 @@
 
             <div class="row">
                 <ul class="collection with-header">
-                    <li class="collection-header">
-                        <h4> {{ course_data[0].recipe_name }} </h4>
+                    <li class="collection-header collection-header-sub">
+                        <h5> {{ course_data[0].recipe_name }} </h5>
                     </li>
                     {% for row in course_data %}
-                    <li class="collection-item">
+                    <li class="collection-item collection-item-sub">
                         <div> {{row.course_name}} 
                         {% if loop.index > 1 %}
                         <a href="{{ url_for('delete_course_from_recipe', recipe_ID = row.recipe_ID, course_ID = row.course_ID) }}" class="secondary-content"><i class = "material-icons">delete</i></a></div>
@@ -38,7 +38,7 @@
             </div>
 
             <div class="col s12">
-                <div class="row">
+                <div class="row sub-footer">
                     <a href="{{url_for('recieps', recipe_ID = course_data[0].recipe_ID) }}" class="btn">Back To Recipe</a>
                 </div>
             </div>
