--- a/templates/course_list.html
+++ b/templates/course_list.html
@@ -11,7 +11,7 @@
                             <div class="collapsible-header"><i class="material-icons">settings_ethernet</i>Course List</div>
                             {% for row in course_list_data %}
                             <div class="collapsible-body"><span>{{ row.course_list_name }} </span>
-                                <a href="{{ url_for('delete_course_list', course_list_ID = row.course_list_ID) }}" class="secondary-content"><i class = "material-icons">delete</i></a>
+                                <a href="{{ url_for('delete_course_list', course_list_ID = row.course_list_ID) }}" class="secondary-content"><i class = "material-icons icon-color">delete</i></a>
                             </div>
                             {% endfor %}
                         </li>
@@ -32,8 +32,8 @@
             </div>
 
             <div class="col s12">
-                <div class="row">
-                    <a href="{{url_for('index')}}" class="btn">Back to Homepage</a>
+                <div class="row sub-footer">
+                    <a href="{{url_for('index')}}" class="btn">Back to Recieps</a>
                 </div>
             </div>
         </div>
