--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -6,25 +6,25 @@
 
             {% for row in ingredient_data %}
             <div class="row">
-                <div class="collection-header">
+                <div class="collection-header collection-header-sub">
                     <h5>{{ row.recipe_name }}</h5>
                 </div>
                 {% if row.ingredients_name %}
                 <form action="{{ url_for('edit_ingredient', recipe_ID = row.recipe_ID , ingredient_ID = row.ingredients_ID ) }}" method="POST">
-                    <div class="row">
-                        <div class="col s6">
+                    <div class="row ingredient-row">
+                        <div class="col s4 ingredient">
                             <label class="active" for="ingredients_name">Ingredients Name</label>
-                            <input value="{{row.ingredients_name}}" id="ingredients_name" name="ingredients_name" type="text" class="validate">
+                            <input value="{{row.ingredients_name}}" id="ingredients_name" name="ingredients_name" type="text" class="validate ingredients_text">
                         </div>
 
-                        <div class="col s3">
+                        <div class="col s3 ingredient">
                             <label class="active" for="ingredient_quantity">Quantity</label>
-                            <input value="{{row.ingredient_quantity}}" id="ingredient_quantity" name="ingredient_quantity" type="text" class="validate">
+                            <input value="{{row.ingredient_quantity}}" id="ingredient_quantity" name="ingredient_quantity" type="text" class="validate ingredients_text">
                         </div>
 
-                        <div class="col s3">
+                        <div class="col s3 ingredient">
                             <label class="active" for="ingredients_unit_of_measurement">Unit of Measurement</label>
-                            <input value="{{row.ingredients_unit_of_measurement}}" id="ingredients_unit_of_measurement" name="ingredients_unit_of_measurement" type="text" class="validate">
+                            <input value="{{row.ingredients_unit_of_measurement}}" id="ingredients_unit_of_measurement" name="ingredients_unit_of_measurement" type="text" class="validate ingredients_text">
                         </div>
                     </div>
                     <input type="submit" class="btn" value="Save Change To Ingredient" />
@@ -32,20 +32,20 @@
                 {% else %}
 
                 <form action="{{ url_for('add_ingredient_to_recipe', recipe_ID = row.recipe_ID ) }}" method="POST">
-                    <div class="row">
-                        <div class="col s6">
+                    <div class="row ingredient-row">
+                        <div class="col s4 ingredient">
                             <label class="active" for="ingredients_name">Ingredients Name</label>
-                            <input value="" id="ingredients_name" name="ingredients_name" type="text" class="validate">
+                            <input placeholder="Ingredients Name" value="" id="ingredients_name" name="ingredients_name" type="text" class="validate ingredients_text">
                         </div>
 
-                        <div class="col s3">
+                        <div class="col s3 ingredient">
                             <label class="active" for="ingredient_quantity">Quantity</label>
-                            <input value="" id="ingredient_quantity" name="ingredient_quantity" type="text" class="validate">
+                            <input placeholder="Quantity" value="" id="ingredient_quantity" name="ingredient_quantity" type="text" class="validate ingredients_text">
                         </div>
 
-                        <div class="col s3">
+                        <div class="col s3 ingredient">
                             <label class="active" for="ingredients_unit_of_measurement">Unit of Measurement</label>
-                            <input value="" id="ingredients_unit_of_measurement" name="ingredients_unit_of_measurement" type="text" class="validate">
+                            <input placeholder="Unit of Measurement" value="" id="ingredients_unit_of_measurement" name="ingredients_unit_of_measurement" type="text" class="validate ingredients_text">
                         </div>
                     </div>
                     <input type="submit" class="btn" value="Add New Ingredient" />
@@ -54,8 +54,11 @@
                 {% endif %}
 
             </div>
-            <a href="{{url_for('delete_ingredient_from_recipe', recipe_ID = row.recipe_ID, ingredient_ID = row.ingredients_ID) }}" class="btn">Delete Direction</a>
-            <a href="{{url_for('recieps', recipe_ID = row.recipe_ID)}}" class="btn">Back</a> {% endfor %}
+            <div class="row sub-footer">
+                <a href="{{url_for('delete_ingredient_from_recipe', recipe_ID = row.recipe_ID, ingredient_ID = row.ingredients_ID) }}" class="btn">Delete Direction</a>
+                <a href="{{url_for('recieps', recipe_ID = row.recipe_ID)}}" class="btn">Back To Recieps</a>
+            </div>
+            {% endfor %}
 
         </div>
     </div>
