--- a/templates/recieps.html
+++ b/templates/recieps.html
@@ -12,11 +12,11 @@
                 </li>
                 {% if recipe.youtube_link: %}
                 <li class="collection-item">
-                    <div>{{ recipe.youtube_link }}<a href="{{ url_for('youtube_link', recipe_ID = recipe_ID) }}" class="secondary-content"><i class="material-icons">edit</i></a></div>
+                    <div>{{ recipe.youtube_link }}<a href="{{ url_for('youtube_link', recipe_ID = recipe_ID) }}" class="secondary-content"><i class="material-icons icon-color">edit</i></a></div>
                 </li>
                 {% else %}
                 <li class="collection-item">
-                    <a href="{{ url_for('youtube_link', recipe_ID = recipe_ID) }}" class='btn'>Add YouTube Link</a>
+                    <a href="{{ url_for('youtube_link', recipe_ID = recipe_ID) }}" class='btn btn-small'>Add YouTube Link</a>
                 </li>
 
                 {% endif %}
@@ -24,13 +24,13 @@
                 <!-- directions data insert-->
 
                 <li class="collection-header">
-                    <h5>Directions</h5> <a href="{{url_for('add_direction', recipe_ID = recipe.ID)}}" class="btn">Add New Direction</a>
+                    <h5>Directions</h5> <a href="{{url_for('add_direction', recipe_ID = recipe.ID)}}" class="btn btn-small">Add New Direction</a>
                 </li>
                 {% for direction in directions_data %} {% if recipe.ID == direction.recipes_ID: %}
 
                 <li class="collection-item">
                     <div>Direction {{ loop.index }} : {{ direction.name }}
-                        <a href="{{url_for('directions', recipe_ID = recipe.ID, direction_ID = direction.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
+                        <a href="{{url_for('directions', recipe_ID = recipe.ID, direction_ID = direction.ID)}}" class="secondary-content"><i class="material-icons icon-color">edit</i></a>
                     </div>
                 </li>
 
@@ -40,13 +40,13 @@
                 <!-- ingredients data insert-->
 
                 <li class="collection-header">
-                    <h5>Ingredients</h5> <a href="{{url_for('add_ingredient', recipe_ID = recipe.ID)}}" class="btn">Add New Ingredient</a>
+                    <h5>Ingredients</h5> <a href="{{url_for('add_ingredient', recipe_ID = recipe.ID)}}" class="btn btn-small">Add New Ingredient</a>
                 </li>
                 {% for ingredient in ingredients_data %} {% if recipe.ID == ingredient.recipes_ID: %}
 
                 <li class="collection-item">
                     <div>Ingredient {{ loop.index }} : {{ ingredient.name }} {{ ingredient.quantity }} {{ ingredient.unit_of_measurement }}
-                        <a href="{{url_for('ingredients', recipe_ID = recipe.ID, ingredient_ID = ingredient.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
+                        <a href="{{url_for('ingredients', recipe_ID = recipe.ID, ingredient_ID = ingredient.ID)}}" class="secondary-content"><i class="material-icons icon-color">edit</i></a>
                     </div>
                 </li>
                 {% endif %} {% endfor %}
@@ -61,13 +61,13 @@
 
                 <li class="collection-item">
                     <div>{{ cuisine.name }}
-                        <a href="{{url_for('cuisine', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
+                        <a href="{{url_for('cuisine', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons icon-color">edit</i></a>
                     </div>
                 </li>
                 {% endif %} {% endfor %} {% else %}
                 <li class="collection-item">
                     <span>Add New Cuisine</span>
-                    <a href="{{url_for('new_cuisine', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons">add</i></a>
+                    <a href="{{url_for('new_cuisine', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons icon-color">add</i></a>
                 </li>
                 {% endif %}
                 <!-- course data insert-->
@@ -79,13 +79,13 @@
 
                 <li class="collection-item">
                     <div>{{ course.name }}
-                        <a href="{{url_for('course', recipe_ID = recipe.ID, course_ID = course.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
+                        <a href="{{url_for('course', recipe_ID = recipe.ID, course_ID = course.ID)}}" class="secondary-content icon-color"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
                 {% endif %} {% endfor %} {% else %}
                 <li class="collection-item">
                     <span>Add New Course</span>
-                    <a href="#" class="secondary-content"><i class="material-icons">plus</i></a>
+                    <a href="#" class="secondary-content"><i class="material-icons icon-color">plus</i></a>
                 </li>
                 {% endif%}
 
@@ -98,13 +98,13 @@
 
                 <li class="collection-item">
                     <div>Allergies : {{ allergen.name }}
-                        <a href="{{url_for('allergens', recipe_ID = recipe.ID, allergens_ID = allergen.ID)}}" class="secondary-content"><i class="material-icons">edit</i></a>
+                        <a href="{{url_for('allergens', recipe_ID = recipe.ID, allergens_ID = allergen.ID)}}" class="secondary-content icon-color"><i class="material-icons">edit</i></a>
                     </div>
                 </li>
                 {% endif %} {% endfor %} {% else %}
                 <li class="collection-item">
                     <span>Add New Allergen</span>
-                    <a href="{{url_for('new_allergen', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons">add</i></a>
+                    <a href="{{url_for('new_allergen', recipe_ID = recipe.ID)}}" class="secondary-content"><i class="material-icons icon-color">add</i></a>
                 </li>
                 {% endif %}
 
@@ -112,7 +112,7 @@
 
             {% endfor %}
 
-            <a href = "{{url_for('index')}}" class="btn">Back</a>
+            <a href = "{{url_for('index')}}" class="btn">Home</a>
             <a class = "waves-effect waves-light btn modal-trigger red" href="#modal">Delete Recipe</a>
 
             <div id = "modal" class="modal">
@@ -121,7 +121,7 @@
                     <p>Are you sure you want to delete this recipe?</p>
                     <p><small>(Changes cannot be reversed)</small></p>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer sub-footer">
                     <a href = "{{ url_for('delete_recipe', recipe_ID = recipe_ID) }}" class="btn red">Delete Recipe</a>
                     <a href = "{{ url_for('recieps', recipe_ID = recipe_ID) }}" class="btn">Cancel</a>
                 </div>
