--- a/templates/course.html
+++ b/templates/course.html
@@ -20,7 +20,7 @@
                 </ul>
             </div>
 
-            <div class="col s5">
+            <div class="col s12 input-selector">
                 <div class="row">
 
                     <form action="{{ url_for('add_course_to_recipe', recipe_ID = course_data[0].recipe_ID, course_ID = course_data[0].course_ID) }}" method="POST">
