--- a/templates/recieps.html
+++ b/templates/recieps.html
@@ -30,7 +30,8 @@
 
                 <li class="collection-item">
                     <div>Direction {{ loop.index }} : {{ direction.name }}
-                        <a href="{{url_for('directions', recipe_ID = recipe.ID, direction_ID = direction.ID)}}" class="secondary-content"><i class="material-icons icon-color">edit</i></a>
+                        <a href="{{url_for('directions', recipe_ID = recipe.ID, direction_ID = direction.ID)}}" class="secondary-content">
+                            </span><i class="material-icons icon-color">edit</i></a>
                     </div>
                 </li>
 
@@ -112,18 +113,18 @@
 
             {% endfor %}
 
-            <a href = "{{url_for('index')}}" class="btn">Home</a>
-            <a class = "waves-effect waves-light btn modal-trigger red" href="#modal">Delete Recipe</a>
+            <a href="{{url_for('index')}}" class="btn">Home</a>
+            <a class="waves-effect waves-light btn modal-trigger red" href="#modal">Delete Recipe</a>
 
-            <div id = "modal" class="modal">
+            <div id="modal" class="modal">
                 <div class="modal-content">
                     <h4>Delete Recipe</h4>
                     <p>Are you sure you want to delete this recipe?</p>
                     <p><small>(Changes cannot be reversed)</small></p>
                 </div>
                 <div class="modal-footer sub-footer">
-                    <a href = "{{ url_for('delete_recipe', recipe_ID = recipe_ID) }}" class="btn red">Delete Recipe</a>
-                    <a href = "{{ url_for('recieps', recipe_ID = recipe_ID) }}" class="btn">Cancel</a>
+                    <a href="{{ url_for('delete_recipe', recipe_ID = recipe_ID) }}" class="btn red">Delete Recipe</a>
+                    <a href="{{ url_for('recieps', recipe_ID = recipe_ID) }}" class="btn">Cancel</a>
                 </div>
             </div>
 
