--- a/templates/youtube_link.html
+++ b/templates/youtube_link.html
@@ -10,7 +10,7 @@
                 <div class="collection-header collection-header-sub">
                     <h5>{{ row.recipe_name }}</h5>
                 </div>
-                <div class="input-field col s10">
+                <div class="input-field input-style">
                     {% if row.recipe_name %}
                     <form action="{{ url_for('save_youtube_link', recipe_ID = recipe_ID) }}" method="POST">
                         <textarea rows="40" cols="50" id="youtube_link_name" name="youtube_link_name" class="validate"> 
