New Feature and Bug Fix: Added parse youtube link and fixed iframe problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,10 @@
   }
 
   /* general headings colours*/
+  
+  .set_youtube {
+    text-align: center;
+  }
 
   .collection-header-sub,
   .collection-item-sub {
