--- a/templates/allergens_list.html
+++ b/templates/allergens_list.html
@@ -20,14 +20,12 @@
             </div>
 
             <div class="row">
-                <div class="input-field col s6">
-
+                <div class="input-field input-style col s12">
                     <form action="{{ url_for('update_allergens_list') }}" method="POST">
                         <input value="" id="allergens_list_name" name="allergens_list_name" type="text" class="validate">
                         <label class="active" for="allergens_list_name">Add New Allergen Here</label>
                         <input type="submit" value="Add New Allergen" class="btn">
                     </form>
-
                 </div>
             </div>
 
