--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,4 +138,15 @@
     width: auto;
     text-align: center;
   }
+
+  #cuisine_list_name,
+  #allergens_list_name,
+  #course_list_name {
+    background-color: #f4f4f4;
+    border-radius: 10px;
+  }
+
+  .collapsible-body {
+    background-color: #f4f4f4;
+  }
   
