--- a/templates/course.html
+++ b/templates/course.html
@@ -13,7 +13,7 @@
                     <li class="collection-item collection-item-sub">
                         <div> {{row.course_name}} 
                         {% if loop.index > 1 %}
-                        <a href="{{ url_for('delete_course_from_recipe', recipe_ID = row.recipe_ID, course_ID = row.course_ID) }}" class="secondary-content"><i class = "material-icons">delete</i></a></div>
+                        <a href="{{ url_for('delete_course_from_recipe', recipe_ID = row.recipe_ID, course_ID = row.course_ID) }}" class="secondary-content"><i class = "material-icons icon-color">delete</i></a></div>
                         {% endif %}
                     </li>
                     {% endfor %}
