--- a/templates/course_list.html
+++ b/templates/course_list.html
@@ -20,8 +20,7 @@
             </div>
 
             <div class="row">
-                <div class="input-field col s6">
-
+                <div class="input-field input-style col s12">
                     <form action="{{ url_for('update_course_list') }}" method="POST">
                         <input value="" id="course_list_name" name="course_list_name" type="text" class="validate">
                         <label class="active" for="course_list_name">Add New Course Here</label>
@@ -30,7 +29,6 @@
 
                 </div>
             </div>
-
             <div class="col s12">
                 <div class="row sub-footer">
                     <a href="{{url_for('index')}}" class="btn">Back to Recieps</a>
