--- a/templates/cuisine_list.html
+++ b/templates/cuisine_list.html
@@ -20,14 +20,12 @@
             </div>
 
             <div class="row">
-                <div class="input-field col s6">
-
+                <div class="input-field input-style col s12">
                     <form action="{{ url_for('update_cuisine_list') }}" method="POST">
                         <input id="cuisine_list_name" name="cuisine_list_name" type="text" class="validate">
                         <label class="active" for="cuisine_list_name">Add New Cuisine Here</label>
-                        <input type="submit" value="Add New Cuisine" class="btn"> 
+                        <input type="submit" value="Add New Cuisine" class="btn">
                     </form>
-
                 </div>
             </div>
 
