--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -33,17 +33,17 @@
 
                 <form action="{{ url_for('add_ingredient_to_recipe', recipe_ID = row.recipe_ID ) }}" method="POST">
                     <div class="row ingredient-row">
-                        <div class="col s4 ingredient">
+                        <div class="col s12 m3 l3 ingredient">
                             <label class="active" for="ingredients_name">Ingredients Name</label>
                             <input placeholder="Ingredients Name" value="" id="ingredients_name" name="ingredients_name" type="text" class="validate ingredients_text">
                         </div>
 
-                        <div class="col s3 ingredient">
+                        <div class="col s12 m3 l3 ingredient">
                             <label class="active" for="ingredient_quantity">Quantity</label>
                             <input placeholder="Quantity" value="" id="ingredient_quantity" name="ingredient_quantity" type="text" class="validate ingredients_text">
                         </div>
 
-                        <div class="col s3 ingredient">
+                        <div class="col s12 m3 l3 ingredient">
                             <label class="active" for="ingredients_unit_of_measurement">Unit of Measurement</label>
                             <input placeholder="Unit of Measurement" value="" id="ingredients_unit_of_measurement" name="ingredients_unit_of_measurement" type="text" class="validate ingredients_text">
                         </div>
