Bug Fix for recipes page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,7 +94,15 @@
     display: inline;
   }
 
-  /* recipe page text and button fix */
+  /* recipe page style fixes */
+
+  .collection-header {
+    min-height: 100px;
+  }
+
+  .collection-item {
+    min-height: 60px;
+  }
 
   .collection-item div {
     width: 85%;
